crates/nash-can/src/snapshots/nash_can__module__tests__function_def.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf a b = a\n"
---
Module {
    tests: [],
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 1,
                    },
                    end: Position {
                        line: 3,
                        column: 2,
                    },
                },
                value: "f",
            },
            args: [
                Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 3,
                        },
                        end: Position {
                            line: 3,
                            column: 4,
                        },
                    },
                    value: Var(
                        "a",
                    ),
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 5,
                        },
                        end: Position {
                            line: 3,
                            column: 6,
                        },
                    },
                    value: Var(
                        "b",
                    ),
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 9,
                    },
                    end: Position {
                        line: 3,
                        column: 10,
                    },
                },
                value: VarLocal(
                    "a",
                ),
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
