crates/nash-can/src/snapshots/nash_can__module__tests__implementation_declaration_unsupported.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimpl Eq int where\n    eq a b = true\n"
---
[
    Unsupported {
        feature: "implementation declaration",
        region: Region {
            start: Position {
                line: 3,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 18,
            },
        },
    },
]
