crates/nash-can/src/snapshots/nash_can__module__tests__import_ctor_by_name.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Maybe exposing (Just)\n\nx = 1\n"
info: diagnostic
---
nash::names::import_ctor_by_name

  × Cannot import variant `Just` directly.
   ╭─[src/Main.nash:3:24]
 2 │ 
 3 │ import Maybe exposing (Just)
   ·                        ────
 4 │ 
   ╰────
  help: Import `Maybe(..)` to make its variants available.
