crates/nash-can/src/snapshots/nash_can__module__tests__import_exposing_not_found_value.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Foo exposing (nonexistent)\n\nx = 1\n"
info: diagnostic
---
nash::names::import_exposing_not_found

  × The `Foo` module does not expose `nonexistent`:
   ╭─[src/Main.nash:3:22]
 2 │ 
 3 │ import Foo exposing (nonexistent)
   ·                      ───────────
 4 │ 
   ╰────
  help: Try bar instead.
