crates/nash-can/src/snapshots/nash_can__module__tests__import_open_alias.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Foo exposing (MyAlias(..))\n\nx = 1\n"
info: diagnostic
---
nash::names::import_open_alias

  × Type alias `MyAlias` has no variants to import.
   ╭─[src/Main.nash:3:30]
 2 │ 
 3 │ import Foo exposing (MyAlias(..))
   ·                              ──
 4 │ 
   ╰────
  help: Remove `(..)`.
