crates/nash-can/src/snapshots/nash_can__module__tests__infix_right_associativity.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing ((<|))\n\ninfix right 0 (<|) = apL\n\napL f x = f x\n"
---
Module {
    tests: [],
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Explicit(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 23,
                    },
                    end: Position {
                        line: 1,
                        column: 27,
                    },
                },
                value: Binop(
                    "<|",
                ),
            },
        ],
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 1,
                    },
                    end: Position {
                        line: 5,
                        column: 4,
                    },
                },
                value: "apL",
            },
            args: [
                Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 5,
                        },
                        end: Position {
                            line: 5,
                            column: 6,
                        },
                    },
                    value: Var(
                        "f",
                    ),
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 7,
                        },
                        end: Position {
                            line: 5,
                            column: 8,
                        },
                    },
                    value: Var(
                        "x",
                    ),
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 11,
                    },
                    end: Position {
                        line: 5,
                        column: 14,
                    },
                },
                value: Call {
                    function: Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 11,
                            },
                            end: Position {
                                line: 5,
                                column: 12,
                            },
                        },
                        value: VarLocal(
                            "f",
                        ),
                    },
                    arguments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 13,
                                },
                                end: Position {
                                    line: 5,
                                    column: 14,
                                },
                            },
                            value: VarLocal(
                                "x",
                            ),
                        },
                    ],
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [
        Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 1,
                },
                end: Position {
                    line: 5,
                    column: 1,
                },
            },
            value: Binop {
                symbol: "<|",
                associativity: Right,
                precedence: Precedence(
                    0,
                ),
                function: QualifiedName {
                    home: ModuleName {
                        package: None,
                        name: "Main",
                    },
                    name: "apL",
                },
                annotation: None,
            },
        },
    ],
}
